# KDADK-TOOLS

./: .pre-commit-config.yaml  LICENSE  README.md  README_en.md
data/: delete_first_two_column.py  delete_flow_under_16.py  feature_filter.py
demo/: CMakeLists.txt  kdadk_file_writer.cpp  kdadk_file_writer.h  kdadk_type.h  main.cpp  online_inference.cpp  online_inference.h  utils.cpp  utils.h
docs/en/: api_reference.md  faq.md  installation_guide.md  menu_feature_guide.md  menu_kdadk_tools.md  quick_start.md  release_notes.md  user_guide.md
docs/zh/: Q&A.md  api_reference.md  faq.md  installation_guide.md  menu_feature_guide.md  menu_kdadk_tools.md  quick_start.md  release_notes.md  user_guide.md
include/: feature_extract.h  inference.h  kdadk.h  kdadk_feature_extract.h  kdadk_inference.h  kdadk_multi_thread.h
output/: kdadk_appid
src/: config.yaml
src/py/: evaluation.py  packages.txt  training.py  utils.py
tools/capture/: capture_linux.sh  capture_linux_docker.sh  capture_win.ps1  readme.txt
tools/labeling/: config_label.yaml  labeling.py  readme.txt
util/: deal.py
utils/: deal.py
